--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -5,25 +5,22 @@
     <meta charset="UTF-8">
     <title>demo page</title>
 
-
-    <link th:href="@{/css/main.css}" rel="stylesheet" />
-    <script type="text/javascript" th:src="@{/js/actions.js}"></script>
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/demo.js}"></script>
 
-
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 </head>
 <body>
 <h2>Style Heading H2</h2>
 
-<p>Welcome to <span th:text="${appName}">Our App</span></p>
-
+<h3>Welcome to <span th:text="${appName}">Our App</span></h3>
 <p>
     This is text on which we want to apply <strong>very special</strong> styling.
 </p>
 
 <button type="button" th:onclick="showAlert()">Show Alert</button>
+<br/><br/>
 
 <button type="button" id="hide">Hide</button>
 <button type="button" id="show">Show</button>
@@ -41,4 +38,5 @@
             $("p").show();
         });
     });
+
 </script>
